Ensure build targets java 8
Although old, Java8 is a good "lowest denominator" for building libs against if no new source language features are needed.